[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/arrow.png" type="Texture" id=1]
[ext_resource path="res://player/Arrow.gd" type="Script" id=2]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 0.232923, -7.89975 )
b = Vector2( 0.635074, 6.53269 )

[node name="Arrow" type="Area2D"]
position = Vector2( -0.043314, -22.6332 )
rotation = 5.48208
script = ExtResource( 2 )

[node name="ArrowLifeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.792687, 0.118941 )
rotation = 0.820305
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Arrow_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="timeout" from="ArrowLifeTimer" to="." method="_on_ArrowLifeTimer_timeout"]
